ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
      - host: aman.orangebitindia.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: oragebitdemo-NAMESPACE-oragne-bit-demo
                  port:
                    number: 80
              path: /NAMESPACE
